Fix med device overflow and tweak fonr color for accessibility

--- a/src/components/hoverHint/styles.module.scss
+++ b/src/components/hoverHint/styles.module.scss
@@ -1,5 +1,5 @@
 .hover-hint-icon {
-    color: blue;
+    color: navy;
     font-weight: bolder;
     visibility: visible;
 }
