--- a/src/components/page/styles.module.scss
+++ b/src/components/page/styles.module.scss
@@ -26,6 +26,7 @@
   margin: auto;
   max-width: 820px;
   opacity: 0.75;
+  overflow: scroll;
   position: relative;
   text-align: center;
   text-wrap: wrap;
@@ -35,6 +36,7 @@
     display: block;
     font-size: normal;
     height: 100%;
+    min-width: 100vw;
     min-height: 100vh;
     width: 100%;
     padding: 0px;
