--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -1,4 +1,6 @@
 .home-container {
+    padding-left: 0px;
+    padding-right: 0px;
     width: 100%;
 
     @media screen and (max-width: 719px) {
@@ -6,14 +8,6 @@
         align-items: center;
         height: 100%;
         min-height: 100vh;
-
-        @media screen and (min-height: 300px) and (max-height: 819px) {
-            padding-bottom: 50%;
-        }
-
-        @media screen and (min-height: 820px) {
-            padding-bottom: 65%;
-        }
     }
 }
 
@@ -27,6 +21,7 @@
     margin-top: 15px;
     max-width: 100%;
     overflow: scroll;
+    padding: 0px;
     width: 100%;
 
     @media screen and (max-width: 719px) {
